--- a/src/views/partials/msgs.hbs
+++ b/src/views/partials/msgs.hbs
@@ -13,12 +13,35 @@
     </symbol>
 </svg>
 
+{{#if success_msg}}
+<div class="container pt-4">
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+     <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
+            <use xlink:href="#exclamation-triangle-fill" />
+    </svg> {{success_msg}}
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+</div>
+{{/if}}
+
+
 {{#if error_msg}}
 <div class="container pt-4">
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
      <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
             <use xlink:href="#exclamation-triangle-fill" />
     </svg> {{error_msg}}
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+</div>
+{{/if}}
+
+{{#if error}}
+<div class="container pt-4">
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+     <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
+            <use xlink:href="#exclamation-triangle-fill" />
+    </svg> {{error}}
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 </div>
