--- a/src/views/students/students_home.hbs
+++ b/src/views/students/students_home.hbs
@@ -1,1 +1,19 @@
-<h1>Hola estudiante</h1>
+<h1>Bienvenido estudiante</h1>
+<p>Estas en el aula virtual </p>
+<div class="container ">
+    <div class="row ">
+        <img src="/img/libros.jpg"  class="rounded-pill col-md-4 mt-4">
+        <p class="col-md-7 mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nesciunt asperiores soluta magni numquam possimus. Optio deserunt provident exercitationem maxime soluta perspiciatis ducimus sequi et, at rerum quia, commodi laboriosam!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae officia, necessitatibus adipisci sit deleniti doloremque inventore eaque accusantium labore. Recusandae nam doloremque accusamus alias qui vitae eius iure dignissimos tempore!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nesciunt asperiores soluta magni numquam possimus. Optio deserunt provident exercitationem maxime soluta perspiciatis ducimus sequi et, at rerum quia, commodi laboriosam!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae officia, necessitatibus adipisci sit deleniti doloremque inventore eaque accusantium labore. Recusandae nam doloremque accusamus alias qui vitae eius iure dignissimos tempore!
+        </p>
+    </div>  
+    <div class="row mt-4">
+        <h5 >Para ingresar a ver tus cursos has click en ver notas </h5>
+        <div class="my-4 col-12" >
+        <a class="btn btn-outline-success d-block mx-auto" style="width: 6rem;" href="/logout" >Ver notas</a>
+        </div>
+    </div>  
+
+</div>
