--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -2,7 +2,7 @@
     <div class="card col-md-9 mx-auto p-5 ">
     <div class="card-body">
     <h1 class=" fw-5">About</h1>
-    <p>Trabajo hecho por @cdcm, realizado usando Express, mysql como base de datos, NodeJS en el backend y en el frontend se uso Javascript puro con bootstrap para los estilos.</p>
+    <p>Trabajo hecho por @cdcm, realizado usando Express, mysql y Mongodb como base de datos, NodeJS en el backend y en el frontend se uso Javascript puro con bootstrap para los estilos.</p>
     </div>
     </div>
 </div>
