--- a/src/views/teachers/teachers_home.hbs
+++ b/src/views/teachers/teachers_home.hbs
@@ -1,1 +1,23 @@
-<h1>Hola profesor</h1>
+<h5 class="mt-2">Bienvenido profesor <b>{{name}}</b> </h5>
+<p>Estas en el aula virtual </p>
+<div class="container ">
+    <div class="row ">
+        <p class="col-md-7 mt-4 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nesciunt asperiores soluta magni numquam possimus. Optio deserunt provident exercitationem maxime soluta perspiciatis ducimus sequi et, at rerum quia, commodi laboriosam!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae officia, necessitatibus adipisci sit deleniti doloremque inventore eaque accusantium labore. Recusandae nam doloremque accusamus alias qui vitae eius iure dignissimos tempore!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nesciunt asperiores soluta magni numquam possimus. Optio deserunt provident exercitationem maxime soluta perspiciatis ducimus sequi et, at rerum quia, commodi laboriosam!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae officia, necessitatibus adipisci sit deleniti doloremque inventore eaque accusantium labore. Recusandae nam doloremque accusamus alias qui vitae eius iure dignissimos tempore!
+        </p>
+        <img src="/img/libros.jpg"  class="rounded-pill col-md-4 mt-4  ms-md-3">
+
+    </div>  
+    <div class="row mt-4">
+        <p class="lead" >Para ingresar a ver tus cursos has click en el siguiente boton </p>
+        <div class="my-2 col-6" >
+        <a class="btn btn-outline-success d-block mx-auto" style="width: 8rem;" href="/teachers/courses/{{id}}" >Ver cursos</a>
+        </div>
+        <div class="my-2 col-6" >
+        <a class="btn btn-outline-success d-block mx-auto" style="width: 10rem;" href="/teachers/add_courses/{{id}}" >Agregar curso</a>
+        </div>
+    </div>  
+
+</div>
