--- a/src/views/newSchool.hbs
+++ b/src/views/newSchool.hbs
@@ -5,21 +5,16 @@
             <div class="display-6">Registrar colegio</div>
         </div>
         <div class="card-body">
-            <form action="/users/signup" method="post" >
+            <form action="/registernew" method="post" >
                 <div class="form-group mb-2">
-                    <input type="text" name="name" class="form-control" placeholder="Nombre del colegio" value="{{name}}"> 
+                    <input type="text" name="name" class="form-control" placeholder="Nombre del colegio" > 
                 </div>
                 <div class="form-group mb-2">
-                    <input type="email" name="email" class="form-control" placeholder="Email" value="{{email}}"> 
+                    <input type="text" name="address" class="form-control" placeholder="Direccion del colegio" > 
                 </div>
-                <div class="form-group mb-2">
-                    <input type="password" name="password" class="form-control" placeholder="Contraseña"> 
-                </div>
-                <div class="form-group mb-2">
-                    <input type="password" name="confirm_password" class="form-control" placeholder="Confirma la contraseña"> 
-                </div>
+            
                 <div class="form-group mb-2 text-center mx-auto">
-                    <button class="btn btn-success  mt-3 col-4">Registrar</button>
+                    <button class="btn btn-success  mt-3 col-4">Registrar colegio</button>
                 </div>
             </form>
 
